--- a/frontend/src/components/contact/Hero.contact.astro
+++ b/frontend/src/components/contact/Hero.contact.astro
@@ -16,38 +16,22 @@
       <input
         type="text"
         placeholder="Name ⋆"
-        class="font-bold rounded-full border border-[#0C0F03] px-[35px] py-[15px] xl:w-[500px]"
-      />
-      <input
-        type="text"
-        placeholder="Email ⋆"
-        class="font-bold rounded-full border border-[#0C0F03] px-[35px] py-[15px] xl:w-[500px]"
+        class="rounded-full bg-white font-medium px-[35px] py-[15px] xl:w-[500px]"
       />
       <input
         type="text"
         placeholder="Drop me a Hello 👋"
-        class="font-bold rounded-full border border-[#0C0F03] px-[35px] py-[15px] xl:w-[500px]"
+        class="font-medium rounded-full border border-[#0C0F03] px-[35px] py-[15px] xl:w-[500px]"
       />
-      <button
-        class="font-bold rounded-full border border-[#0C0F03] px-[35px] py-[15px] shadow-[4px_4px_0px_#0C0F03] hover-active-effect"
-        >Send</button
+      <a href="/portfolio">
+        <button
+          class="rounded-full bg-white font-medium px-[35px] py-[15px] shadow-[4px_4px_0px_#44403b] hover-active-effect"
+          >Send</button
+        ></a
       >
       <p class="xl:basis-150 text-gray-500 text-dm text-sm">
         ⋆ Just drop me a Hello with your name and email and i'll reach out soon
       </p>
-    </div>
-  </div>
-  <div
-    class="rounded-full p-2 border border-[#0C0F03] shadow-[2px_2px_0px_#0C0F03] hover-active-effect-small"
-  >
-    <div
-      class="relative w-60 sm:w-80 h-60 sm:h-80 rounded-full overflow-hidden"
-    >
-      <img
-        class="absolute h-full w-full object-cover"
-        src="/images/profile.webp"
-        alt="profile-image"
-      />
     </div>
   </div>
 </div>
