--- a/frontend/src/components/contact/Hero.contact.astro
+++ b/frontend/src/components/contact/Hero.contact.astro
@@ -1,11 +1,11 @@
 <div
-  class="w-full max-w-[1280px] px-6 sm:px-12 md:px-24 lg:px-48 xl:px-6 py-10 mx-auto flex flex-col-reverse gap-10 xl:flex-row xl:justify-between xl:items-center items-center"
+  class="w-full max-w-[1280px] px-6 sm:px-12 md:px-24 lg:px-48 xl:px-6 py-10 mx-auto flex flex-col-reverse gap-10 xl:flex-row xl:justify-between xl:items-center items-center my-20"
 >
   <div
     class="flex flex-col gap-2 justify-center items-center text-center xl:text-left xl:items-start xl:justify-normal"
   >
     <div class="flex items-center gap-5">
-      <p class="text-2xl sm:text-3xl md:text-4xl font-medium">Let's Connect</p>
+      <p class="text-2xl sm:text-3xl md:text-4xl font-medium text-stone-800">Let's Connect</p>
       <span
         class="cursor-pointer text-6xl xl:text-4xl animate-wave transition-transform duration-300 origin-bottom hover:scale-250 hover:rotate-30 active:scale-150 active:rotate-30"
         >👋</span
@@ -21,7 +21,7 @@
       <input
         type="text"
         placeholder="Drop me a Hello 👋"
-        class="font-medium rounded-full border border-[#0C0F03] px-[35px] py-[15px] xl:w-[500px]"
+        class="font-medium bg-white rounded-full px-[35px] py-[15px] xl:w-[500px]"
       />
       <a href="/portfolio">
         <button
@@ -30,7 +30,7 @@
         ></a
       >
       <p class="xl:basis-150 text-gray-500 text-dm text-sm">
-        ⋆ Just drop me a Hello with your name and email and i'll reach out soon
+        ⋆ Just drop me a Hello with your name and i'll reach out soon
       </p>
     </div>
   </div>
