--- a/frontend/src/components/portfolio/Hero.portfolio.astro
+++ b/frontend/src/components/portfolio/Hero.portfolio.astro
@@ -3,24 +3,18 @@
 >
   <div class="flex flex-col xl:flex-row justify-between items-center gap-5">
     <p
-      class="font-medium text-3xl md:text-4xl lg:text-5xl xl:text-6xl text-center xl:text-left"
+      class="font-medium text-3xl md:text-4xl lg:text-5xl xl:text-6xl text-center w-full"
     >
-      My Latest Development Projects
+      My Projects
     </p>
-    <a href="/portfolio">
-      <button
-        class="whitespace-nowrap hidden xl:block w-fit rounded-full font-medium border border-[#0C0F03] px-[35px] py-[15px] shadow-[4px_4px_0px_#0C0F03] hover-active-effect"
-        >View All Projects</button
-      ></a
-    >
   </div>
   <div class="flex flex-col gap-10">
     <div class="flex flex-col xl:flex-row items-center gap-5 xl:gap-20">
       <div
-        class="w-full xl:w-11/20 p-4 border border-[#0C0F03] rounded-xl shadow-[2px_2px_0px_#0C0F03]"
+        class="w-full xl:w-11/20 p-4 bg-white rounded-xl shadow-lg"
       >
         <img
-          class="rounded-xl w-full bg-cover"
+          class="rounded-xl w-full bg-cover shadow"
           src="/images/home-preview.webp"
           alt=""
         />
@@ -60,10 +54,10 @@
     </div>
     <div class="flex flex-col xl:flex-row-reverse items-center gap-5 xl:gap-20">
       <div
-        class="w-full xl:w-11/20 p-4 border border-[#0C0F03] rounded-xl shadow-[2px_2px_0px_#0C0F03]"
+        class="w-full xl:w-11/20 p-4 bg-white rounded-xl shadow-lg"
       >
         <img
-          class="rounded-xl w-full bg-cover"
+          class="rounded-xl w-full bg-cover shadow"
           src="/images/nutrition.png"
           alt=""
         />
@@ -104,9 +98,9 @@
     </div>
     <div class="flex flex-col xl:flex-row items-center gap-5 xl:gap-20">
       <div
-        class="w-full xl:w-11/20 p-4 border border-[#0C0F03] rounded-xl flex flex-col gap-6 shadow-[2px_2px_0px_#0C0F03]"
+        class="w-full xl:w-11/20 p-4 bg-white rounded-xl shadow-lg"
       >
-        <img class="w-full bg-cover rounded-xl" src="/images/fake.png" />
+        <img class="w-full bg-cover rounded-xl shadow" src="/images/fake.png" />
       </div>
       <div class="w-full xl:w-9/20 flex flex-col gap-5">
         <p class="text-2xl sm:text-3xl font-medium">
