--- a/frontend/src/components/Navbar.astro
+++ b/frontend/src/components/Navbar.astro
@@ -23,11 +23,11 @@
       <a href="/portfolio">Portfolio</a>
     </li>
   </ul>
-  <div class="relative sm:hidden">
+  <div class="relative sm:hidden flex flex-col gap-2">
     <p
       id="menu_icon"
       aria-label="Menu"
-      class="rotate-180 cursor-pointer p-4 border border-[#0C0F03] rounded-full w-fit shadow-[-2px_-2px_0px_#0C0F03] hover:shadow-[-4px_-4px_0px_#0C0F03] hover:-translate-y-1 hover:bg-[#C8F031]"
+      class="rotate-180 cursor-pointer p-4 bg-white rounded-full w-fit shadow-[-2px_-2px_0px_#44403b] hover:shadow-[-4px_-4px_0px_#0C0F03] hover:-translate-y-1 hover:bg-[#C8F031]"
     >
       <svg
         width="14"
@@ -44,36 +44,36 @@
           stroke-linejoin="round"></path>
       </svg>
     </p>
-    <a href="/Nikhil-Resume.pdf" download>
-      <p
-        id="menu_icon"
-        aria-label="Download CV"
-        class="absolute mt-2 cursor-pointer p-4 border border-[#0C0F03] rounded-full w-fit shadow-[2px_2px_0px_#0C0F03] hover:shadow-[4px_4px_0px_#0C0F03] hover:-translate-y-1 hover:bg-[#C8F031]"
-      >
-        <svg
-          width="14"
-          height="14"
-          viewBox="0 0 24 24"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
+      <a href="/Nikhil-Resume.pdf" download>
+        <p
+          id="menu_icon"
+          aria-label="Download CV"
+          class="cursor-pointer bg-white p-4 rounded-full w-fit shadow-[2px_2px_0px_#44403b] hover-active-effect hover:-translate-y-1"
         >
-          <path
-            d="M12 3V16M12 16L8 12M12 16L16 12"
-            stroke="#0C0F03"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"></path>
-          <path
-            d="M4 20H20"
-            stroke="#0C0F03"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"></path>
-        </svg>
-      </p>
-    </a>
+          <svg
+            width="14"
+            height="14"
+            viewBox="0 0 24 24"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M12 3V16M12 16L8 12M12 16L16 12"
+              stroke="#0C0F03"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"></path>
+            <path
+              d="M4 20H20"
+              stroke="#0C0F03"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"></path>
+          </svg>
+        </p>
+      </a>
     <p
-      class="absolute top-27 left-1 xl:basis-150 text-gray-500 font-bold text-sm"
+      class="absolute top-27 left-1 xl:basis-150 text-gray-500 font-medium text-sm"
     >
       ⋆ CV
     </p>
