--- a/frontend/src/components/index/Hero.astro
+++ b/frontend/src/components/index/Hero.astro
@@ -68,7 +68,7 @@
           </svg>
         </p>
       </a>
-      <p class="hidden sm:block xl:basis-150 text-gray-500 font-bold text-sm">⋆ CV</p>
+      <p class="hidden sm:block xl:basis-150 text-gray-500 font-medium text-sm">⋆ CV</p>
     </div>
   </div>
 </div>
