--- a/frontend/src/components/Navbar.astro
+++ b/frontend/src/components/Navbar.astro
@@ -10,7 +10,6 @@
         >UHSRAV</span
       >
     </a>
-
   </div>
 
   <ul
@@ -23,7 +22,36 @@
       <a href="/portfolio">Portfolio</a>
     </li>
   </ul>
-  <div class="relative sm:hidden flex flex-col gap-2">
+  <div class="relative sm:hidden flex gap-2">
+    <a href="/Nikhil-Resume.pdf" download class="relative">
+      <p
+        id="menu_icon"
+        aria-label="Download CV"
+        class="cursor-pointer bg-white p-4 rounded-full w-fit shadow-[2px_2px_0px_#44403b] hover-active-effect hover:-translate-y-1"
+      >
+        <svg
+          width="14"
+          height="14"
+          viewBox="0 0 24 24"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M12 3V16M12 16L8 12M12 16L16 12"
+            stroke="#0C0F03"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"></path>
+          <path
+            d="M4 20H20"
+            stroke="#0C0F03"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"></path>
+        </svg>
+      </p>
+      <p class="absolute top-[calc(100%+4px)] left-1 xl:basis-150 text-gray-500 font-medium text-sm">⋆ CV</p>
+    </a>
     <p
       id="menu_icon"
       aria-label="Menu"
@@ -43,39 +71,6 @@
           stroke-linecap="round"
           stroke-linejoin="round"></path>
       </svg>
-    </p>
-      <a href="/Nikhil-Resume.pdf" download>
-        <p
-          id="menu_icon"
-          aria-label="Download CV"
-          class="cursor-pointer bg-white p-4 rounded-full w-fit shadow-[2px_2px_0px_#44403b] hover-active-effect hover:-translate-y-1"
-        >
-          <svg
-            width="14"
-            height="14"
-            viewBox="0 0 24 24"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              d="M12 3V16M12 16L8 12M12 16L16 12"
-              stroke="#0C0F03"
-              stroke-width="2"
-              stroke-linecap="round"
-              stroke-linejoin="round"></path>
-            <path
-              d="M4 20H20"
-              stroke="#0C0F03"
-              stroke-width="2"
-              stroke-linecap="round"
-              stroke-linejoin="round"></path>
-          </svg>
-        </p>
-      </a>
-    <p
-      class="absolute top-27 left-1 xl:basis-150 text-gray-500 font-medium text-sm"
-    >
-      ⋆ CV
     </p>
   </div>
   <div
