--- a/frontend/src/components/index/Hero.astro
+++ b/frontend/src/components/index/Hero.astro
@@ -28,7 +28,7 @@
     <div
       class="relative text-nowrap flex flex-col justify-center items-center sm:flex-row gap-4 mt-4 font-medium"
     >
-      <a href="/contact">
+      <a href="/about">
         <button
           class="bg-lime-300 rounded-full text-stone-900 px-[35px] py-[15px] shadow-[4px_4px_0px_#35530e] hover-active-effect"
           >Get In Touch</button
