--- a/frontend/src/components/Footer.astro
+++ b/frontend/src/components/Footer.astro
@@ -12,7 +12,7 @@
           and creative developer from Delhi - India passionate about creating
           memorable experiences.
         </p>
-        <a href="/contact">
+        <a href="/about">
           <button
             class="w-fit rounded-full bg-stone-100 font-medium text-lg sm:text-lg text-stone-900 px-[35px] py-[15px] shadow-[4px_4px_0px_#35530e] cursor-pointer hover:-translate-y-[2px] hover:shadow-[5px_5px_0px_#35530e]"
             >Get In Touch</button
