--- a/frontend/src/components/portfolio/Hero.portfolio.astro
+++ b/frontend/src/components/portfolio/Hero.portfolio.astro
@@ -11,10 +11,10 @@
   <div class="flex flex-col gap-10">
     <div class="flex flex-col xl:flex-row items-center gap-5 xl:gap-20">
       <div
-        class="w-full xl:w-11/20 p-4 bg-white rounded-xl shadow-lg"
+        class="w-full xl:w-11/20 p-4 border border-[#0C0F03] rounded-xl shadow-[2px_2px_0px_#0C0F03]"
       >
         <img
-          class="rounded-xl w-full bg-cover shadow"
+          class="rounded-xl w-full bg-cover"
           src="/images/home-preview.webp"
           alt=""
         />
@@ -54,10 +54,10 @@
     </div>
     <div class="flex flex-col xl:flex-row-reverse items-center gap-5 xl:gap-20">
       <div
-        class="w-full xl:w-11/20 p-4 bg-white rounded-xl shadow-lg"
+        class="w-full xl:w-11/20 p-4 border border-[#0C0F03] rounded-xl shadow-[2px_2px_0px_#0C0F03]"
       >
         <img
-          class="rounded-xl w-full bg-cover shadow"
+          class="rounded-xl w-full bg-cover"
           src="/images/nutrition.png"
           alt=""
         />
@@ -98,9 +98,9 @@
     </div>
     <div class="flex flex-col xl:flex-row items-center gap-5 xl:gap-20">
       <div
-        class="w-full xl:w-11/20 p-4 bg-white rounded-xl shadow-lg"
+        class="w-full xl:w-11/20 p-4 border border-[#0C0F03] rounded-xl flex flex-col gap-6 shadow-[2px_2px_0px_#0C0F03]"
       >
-        <img class="w-full bg-cover rounded-xl shadow" src="/images/fake.png" />
+        <img class="w-full bg-cover rounded-xl" src="/images/fake.png" />
       </div>
       <div class="w-full xl:w-9/20 flex flex-col gap-5">
         <p class="text-2xl sm:text-3xl font-medium">
