--- a/frontend/src/components/about/Hero.about.astro
+++ b/frontend/src/components/about/Hero.about.astro
@@ -8,7 +8,7 @@
       <p class="hidden xl:block w-[36px] h-[2px] bg-[#0C0F03]"></p>
       <p class="text-2xl sm:text-3xl md:text-4xl font-medium text-stone-600">Hello, I'm</p>
       <span
-        class="cursor-pointer text-6xl xl:text-4xl animate-wave transition-transform duration-300 origin-bottom hover:scale-250 hover:rotate-30 active:scale-150 active:rotate-30"
+        class="cursor-pointer text-4xl animate-wave transition-transform duration-300 origin-bottom hover:rotate-30 active:scale-150 active:rotate-30"
         >👋</span
       >
     </div>
