--- a/frontend/src/components/index/Hero.astro
+++ b/frontend/src/components/index/Hero.astro
@@ -1,5 +1,5 @@
 <div
-  class="w-full max-w-[1280px] px-6 sm:px-12 md:px-24 lg:px-48 xl:px-6 mx-auto py-10 xl:py-50 mb-20 xl:mb-0"
+  class="w-full max-w-[1280px] px-6 sm:px-12 md:px-24 lg:px-48 xl:px-6 mx-auto py-8 xl:py-22 mb-20 xl:mb-0"
 >
   <div class="flex flex-col justify-center items-center gap-5">
     <div
@@ -10,12 +10,15 @@
         Hello, I'm Nikhil
       </p>
       <span
-        class="cursor-pointer text-8xl xl:text-4xl animate-wave transition-transform duration-300 origin-bottom hover:scale-250 hover:rotate-30 active:scale-150 active:rotate-30"
+        class="cursor-pointer text-4xl animate-wave transition-transform duration-300 origin-bottom hover:rotate-30 active:scale-150 active:rotate-30"
         >👋</span
       >
     </div>
+    <div class="w-full py-5">
+      <div class="badge-base [&_iframe]:m-auto LI-profile-badge" data-locale="en_US" data-size="large" data-theme="light" data-type="HORIZONTAL" data-vanity="naive-nikhil" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://in.linkedin.com/in/naive-nikhil?trk=profile-badge"></a></div>
+    </div>
     <p
-      class="flex text-stone-800 justify-center items-center font-bold text-center text-5xl md:text-6xl lg:text-7xl xl:text-8xl"
+      class="flex text-stone-800 justify-center items-center font-bold text-center text-2xl md:text-6xl lg:text-7xl xl:text-8xl"
     >
       Digital Designer Creative Developer
     </p>
