--- a/frontend/src/layouts/Layout.astro
+++ b/frontend/src/layouts/Layout.astro
@@ -30,6 +30,7 @@ import ScrollUp from "../components/ScrollUp.astro";
     />
     <link rel="manifest" href="favicon/site.webmanifest" />
     <title>My Portfolio</title>
+    <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script> 
   </head>
   <body class="opacity-0 transition-opacity duration-300 ease-in-out text-gray-700 bg-stone-100">
     <ScrollUp />
